<?xml version="1.0"?>
<package>
  <name>arl_interfaces</name>
  <version>0.1.0</version>
  <description>The arl_interfaces package</description>

  <author email="arne.hitzmann@arl.sys.es.osaka-u.ac.jp">Arne Hitzmann</author>
  <maintainer email="arne.hitzmann@arl.sys.es.osaka-u.ac.jp">Arne Hitzmann</maintainer>
 
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>roscpp</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
